--- a/style.css
+++ b/style.css
@@ -53,8 +53,8 @@ h1,h2,h3{
 }
 .numb {
   position: absolute;
-  top: 13%;
-  left: 50%;
+  margin-top: 74px;
+  margin-left: 74px;
   transform: translate(-50%, -50%);
   z-index: 10;
   font-size: 18px;
