--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
     align-items:center;
     justify-content: center;
     flex-direction:column;
+    margin-top:50px;
     /* width: 800px; */
     margin:30px auto;
     color: #000000;
@@ -39,8 +40,8 @@ h1,h2,h3{
     justify-content: center;
     height:150px;
     width:150px;
-    
-    border:1px solid white;
+    border-left: 2px solid blue;
+    /* border:1px solid white; */
     border-radius :100%;
     margin-bottom: 50px;
     animation:spin 4s linear infinite ;
@@ -125,9 +126,11 @@ button:hover:active:before{
     justify-content: center;
     height:150px;
     width:150px;
-    border:1px solid white;
-    border-radius :50%;
+    border-left: 2px solid blue;
+    /* border:1px solid white; */
+    border-radius :100%;
     margin-bottom: 50px;
+    animation:spin 4s linear infinite ;
 }
     button{
         display:flex;
